# openloop

./: Cargo.toml  README.md  build.sh
FosterFormat-Model/: index.xml
FosterFormat-Model/data/: index.xml  mapdata.toml
src/core/FosterFormat/: README
src/server/: README  server.js  server.sh
src/server/modules/: IM.sh
