[package]
name = "openloop"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "server/main.rs"

[[bin]]
name = "core"
path = "core/main.rs"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.27.2"
futures-util = "0.3.30"
reqwest = "0.12.4"
tokio = "1.37.0"
tokio-tungstenite = "0.21.0"
tokio-util = "0.7.10"
url = "2.5.0"
